--- a/optional/config/tech-docs.yml.tt
+++ b/optional/config/tech-docs.yml.tt
@@ -2,17 +2,17 @@
 host: <%= @canonical_host %>
 
 # Header-related options
-show_govuk_logo: true
+show_govuk_logo: false
 service_name: My First Service
-service_link: https://www.larry-the-cat.service.gov.uk
+service_link: https://www.larry-the-cat.finance-ni.gov.uk
 phase: Beta
 
 # Links to show on right-hand-side of header
 header_links:
-  About: https://www.larry-the-cat.service.gov.uk
-  Get Started: https://www.larry-the-cat.service.gov.uk/get-started
+  About: https://www.larry-the-cat.finance-ni.gov.uk
+  Get Started: https://www.larry-the-cat.finance-ni.gov.uk/get-started
   Documentation: /
-  Support: https://www.larry-the-cat.service.gov.uk/support
+  Support: https://www.larry-the-cat.finance-ni.gov.uk/support
 
 # Enables search functionality. This indexes pages only and is not recommended for single-page sites.
 enable_search: false
@@ -35,4 +35,4 @@ max_toc_heading_level: 6
 prevent_indexing: false
 
 show_contribution_banner: true
-github_repo: alphagov/YOUR_REPO
+github_repo: dof-dss/YOUR_REPO
