--- a/optional/config/tech-docs.yml.tt
+++ b/optional/config/tech-docs.yml.tt
@@ -3,16 +3,14 @@ host: <%= @canonical_host %>
 
 # Header-related options
 show_govuk_logo: false
-service_name: My First Service
-service_link: https://www.larry-the-cat.finance-ni.gov.uk
+service_name: DSS Docs Service
+service_link: https://docs.finance-ni.gov.uk
 phase: Beta
 
 # Links to show on right-hand-side of header
 header_links:
-  About: https://www.larry-the-cat.finance-ni.gov.uk
-  Get Started: https://www.larry-the-cat.finance-ni.gov.uk/get-started
   Documentation: /
-  Support: https://www.larry-the-cat.finance-ni.gov.uk/support
+  GitHub: https://git@github.com:dof-dss/tech-docs-template
 
 # Enables search functionality. This indexes pages only and is not recommended for single-page sites.
 enable_search: false
@@ -35,4 +33,4 @@ max_toc_heading_level: 6
 prevent_indexing: false
 
 show_contribution_banner: true
-github_repo: dof-dss/YOUR_REPO
+github_repo: dof-dss/tech-docs-template
